After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797248 - avwait: Fix sending of dropping=true messages
avwait: Fix sending of dropping=true messages
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on: 797145
Blocks:
 
 
Reported: 2018-10-04 09:14 UTC by Vivia Nikolaidou
Modified: 2018-10-04 09:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
avwait: Fix sending of dropping=true messages (1.40 KB, patch)
2018-10-04 09:15 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2018-10-04 09:14:37 UTC
See commit message
Comment 1 Vivia Nikolaidou 2018-10-04 09:15:01 UTC
Created attachment 373845 [details] [review]
avwait: Fix sending of dropping=true messages

If the first audio buffer to be dropped started right between two video
buffers (after the end of the first but before the start of the second,
as is often the case with N/1001 video frame rates), we would miss
sending the dropping=true message.
Comment 2 Vivia Nikolaidou 2018-10-04 09:41:49 UTC
Review of attachment 373845 [details] [review]:

commit d89104c57fe6e6d44e24ff036483c31b62e74cfe (HEAD -> master, origin/master, origin/HEAD)
Author: Vivia Nikolaidou <vivia@ahiru.eu>
Date:   Thu Oct 4 12:07:31 2018 +0300

    avwait: Fix sending of dropping=true messages

    If the first audio buffer to be dropped started right between two video
    buffers (after the end of the first but before the start of the second,
    as is often the case with N/1001 video frame rates), we would miss
    sending the dropping=true message.

    https://bugzilla.gnome.org/show_bug.cgi?id=797248
Comment 3 Vivia Nikolaidou 2018-10-04 09:41:54 UTC
Review of attachment 373845 [details] [review]:

commit d89104c57fe6e6d44e24ff036483c31b62e74cfe (HEAD -> master, origin/master, origin/HEAD)
Author: Vivia Nikolaidou <vivia@ahiru.eu>
Date:   Thu Oct 4 12:07:31 2018 +0300

    avwait: Fix sending of dropping=true messages

    If the first audio buffer to be dropped started right between two video
    buffers (after the end of the first but before the start of the second,
    as is often the case with N/1001 video frame rates), we would miss
    sending the dropping=true message.

    https://bugzilla.gnome.org/show_bug.cgi?id=797248